# rag-chatbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: lint.yml  test.yml
backend/: app.py
backend/chatbot/: __init__.py  app.py  app.test.py  getCollection.py  get_collection.py  get_collection.test.py  get_llm.py  get_llm.test.py  rag.py  response_file.txt  samples.py
frontend/src/: index.css
frontend/src/components/: ChatBot.jsx
frontend/src/pages/: HomePage.jsx
test/backend/: getCollection.test.py  getLLM.test.py  mock_test.py
